# biblo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exec.sh  setup.sh
inc/: data.h  library.h  serializer.h  utils.h
src/: data.cpp  library.cpp  main.cpp  serializer.cpp  utils.cpp
